fixed spacing issues

--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,7 @@
 }
 .hero{
   width: 100%;
-  height: 500px;
+  height: 600px;
   background:url(components/images/grid.png);
 
   background-size: cover;
@@ -97,6 +97,7 @@ line-height: 17px;
   font-weight: 700px;
   line-height: 36px;
   text-align: center;
+  
 }
 .sp{
   font-family: 'Neue Montreal';
